--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>6w6wH</title>
   </head>
   <body>
-    <div id="root" style="height: 100%"></div>
+    <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
