--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
     <title>6w6wH</title>
   </head>
   <body>
-    <div id="root" style="height: 100%"></div>
+    <div
+      id="root"
+      style="
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+      "
+    ></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
