--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         height: 100%;
         display: flex;
         flex-direction: column;
-        min-height: 100vh;
+        min-height: 100dvh;
       "
     ></div>
     <script type="module" src="/src/main.tsx"></script>
